<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flex/AP</string>
    <string name="app_description">An app for anime-pictures.net</string>

    <string name="title_posts">Posts</string>
    <string name="title_history">History</string>
    <string name="title_settings">Settings</string>
    <string name="title_login">Sign in</string>
    <string name="title_register">Sign up</string>
    <string name="title_account">Account</string>
    <string name="title_about">About</string>
    <string name="title_copyright">Copyright</string>
    <string name="title_donation">Donation</string>
    <string name="title_tags_blacklist">Tags blacklist</string>
    <string name="title_setup_wizard">Setup Wizard</string>
    <string name="title_comments">Comments</string>

    <string name="posts_search">Search</string>
    <string name="posts_open_filter">Open filter</string>
    <string name="posts_more_options">More options</string>
    <string name="posts_order">Order</string>
    <string name="posts_order_date">Date</string>
    <string name="posts_order_date_revers">Date(revers)</string>
    <string name="posts_order_rating">Rating</string>
    <string name="posts_order_downloads">Downloads</string>
    <string name="posts_order_size">Size</string>
    <string name="posts_order_tags_count">Tags count</string>
    <string name="posts_date_range">Date range</string>
    <string name="posts_date_range_anytime">Anytime</string>
    <string name="posts_date_range_past_day">Past day</string>
    <string name="posts_date_range_past_week">Past week</string>
    <string name="posts_date_range_past_month">Past month</string>
    <string name="posts_aspect_ratio">Aspect ratio</string>
    <string name="posts_extension">Extension</string>
    <string name="posts_extension_jpg">jpeg/jpg</string>
    <string name="posts_extension_png">png</string>
    <string name="posts_extension_gif">gif</string>
    <string name="posts_muzei_set">Pin to Muzei</string>

    <string name="history_clear_all">Clear all</string>
    <string name="history_clear_all_content">All history will be cleared.</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_no">No</string>

    <string name="nav_header_user_avatar_desc">User avatar</string>
    <string name="nav_header_login">Login</string>

    <string name="settings_night_mode">Night mode</string>
    <string name="settings_night_mode_on">On</string>
    <string name="settings_night_mode_off">Off</string>
    <string name="settings_night_mode_system">Follow system</string>
    <string name="settings_night_mode_battery">Follow battery saver</string>
    <string name="settings_page_limit">Limit per page</string>
    <string name="settings_muzei_limit">Muzei limit</string>
    <string name="settings_preview_size">Preview size</string>
    <string name="settings_preview_size_small">Small</string>
    <string name="settings_preview_size_medium">Medium</string>
    <string name="settings_preview_size_big">Big</string>
    <string name="settings_detail_size">Detail size</string>
    <string name="settings_detail_size_medium">Medium</string>
    <string name="settings_detail_size_big">Big</string>
    <string name="settings_detail_size_origin">Origin</string>
    <string name="settings_download_path">Download path</string>
    <string name="settings_unset">Not set</string>
    <string name="settings_scheme">Scheme</string>
    <string name="settings_host">Host</string>
    <string name="settings_grid_width">Grid width</string>
    <string name="settings_grid_width_small">Small</string>
    <string name="settings_grid_width_normal">Normal</string>
    <string name="settings_grid_width_big">Big</string>

    <string name="settings_server">Server</string>
    <string name="settings_display">Display</string>
    <string name="settings_options">Options</string>

    <string name="action_retry">Retry</string>
    <string name="save_file">Save file</string>
    <string name="tags">Tags</string>
    <string name="info">Information</string>
    <string name="vote">Vote</string>
    <string name="share_via">Via</string>

    <string name="search_posts_hint">Search posts…</string>
    <string name="add_tag_filter_hint">Add tag…</string>

    <string name="set_up_server">Set up server</string>
    <string name="set_up_server_scheme">Scheme:</string>
    <string name="set_up_server_scheme_http" translatable="false">HTTP</string>
    <string name="set_up_server_scheme_https" translatable="false">HTTPS</string>
    <string name="set_up_server_host">Host:</string>
    <string name="set_up_server_host_example" translatable="false">example.com</string>

    <string name="tags_filter_clear_all">Clear all</string>
    <string name="tags_filter_clear_all_content">All tags will be cleared.</string>
    <string name="tags_blacklist_add">Add tag</string>
    <string name="tags_blacklist_add_hint">Add tag…</string>

    <string name="placeholder_post_id" translatable="false">№ %01$d</string>
    <string name="placeholder_post_res" translatable="false">%01$d x %02$d</string>
    <string name="placeholder_post_res_size" translatable="false">%01$d x %02$d - %03$s</string>
    <string name="placeholder_post_color" translatable="false">[%01$d, %02$d, %03$d]</string>
    <string name="placeholder_action_pay_by_google_play" translatable="false">Google Play - %01$s</string>

    <string name="msg_path_denied">Save failed! No access to the current path.</string>
    <string name="msg_download_complete">Download complete</string>
    <string name="msg_download_failed">Download failed</string>
    <string name="msg_login_tip_empty">Username or Password can not be empty.</string>
    <string name="msg_host_cannot_be_empty">Host cannot be empty.</string>
    <string name="msg_unsupported_host">Unsupported host.</string>
    <string name="msg_minimum_two_characters">Minimum length of 2 characters.</string>

    <string name="action_pay_by_google_play">Google Play</string>

    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="post_color">Color</string>
    <string name="action_remove_ads">Remove Ads</string>
    <string name="action_set_as">Set as…</string>
    <string name="action_copy_link">Copy link</string>
    <string name="action_share_link">Share link</string>
    <string name="action_send_file">Send file</string>
    <string name="action_download">Download</string>
    <string name="action_copy">Copy</string>
    <string name="action_delete">Delete</string>
    <string name="action_add_tag_filter">Add tag</string>

    <string name="action_comment_send">Send</string>
    <string name="action_comment_hint">Comment</string>

    <string name="user_votes">Votes</string>
    <string name="user_posts">Posts</string>
    <string name="user_logout">Logout</string>
    <string name="user_logout_content">Are you sure to logout?</string>

    <string name="about_app" translatable="false">Flex/AP</string>
    <string name="about_app_version">Version</string>
    <string name="about_app_translation">Translate this app</string>
    <string name="about_app_rate">Rate this app</string>
    <string name="about_author">Author</string>
    <string name="about_author_email">Email</string>
    <string name="about_author_website">Website</string>
    <string name="about_feedback">Feedback</string>
    <string name="about_feedback_github">Github</string>
    <string name="about_feedback_telegram">Telegram</string>
    <string name="about_feedback_email">Email</string>
    <string name="about_copyright">Copyright</string>
    <string name="about_licenses">Licenses</string>
    <string name="about_open_source_licenses">Open Source Licenses</string>

    <string name="donation_description">Donate to support open source development.</string>

    <string name="muzei_attribution" translatable="false">Post from Flex/AP</string>
</resources>
