<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_comments"
        android:icon="@drawable/ic_mode_comment_outline_24dp"
        android:title="@string/title_comments"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_set_as"
        android:title="@string/action_set_as"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_copy_link"
        android:title="@string/action_copy_link"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_share_link"
        android:title="@string/action_share_link"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_send_file"
        android:title="@string/action_send_file"
        app:showAsAction="never"/>
</menu>