<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_posts"
                android:icon="@drawable/item_drawer_photo"
                android:title="@string/title_posts"/>
        <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history_24dp"
                android:title="@string/title_history"/>
        <item
            android:id="@+id/nav_tags_blacklist"
            android:icon="@drawable/item_drawer_tags_blacklist"
            android:title="@string/title_tags_blacklist"/>
        <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/item_drawer_settings"
                android:title="@string/title_settings"/>
        <item
                android:id="@+id/nav_about"
                android:icon="@drawable/item_drawer_info"
                android:title="@string/title_about"/>
    </group>

</menu>
