<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/bottom_bar_container"
        android:layout_gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/ad_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            ads:adSize="SMART_BANNER"
            ads:adUnitId="ca-app-pub-1547571472841615/8227084707"/>

    <LinearLayout
            android:layout_gravity="top"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="@dimen/bottom_bar_height">

        <ImageButton
                android:id="@+id/post_tags"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/bottom_bar_height"
                android:src="@drawable/ic_bookmark_border_24dp"
                android:tint="@color/white"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/tags"/>

        <ImageButton
                android:id="@+id/post_info"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/bottom_bar_height"
                android:src="@drawable/ic_info_outline_24dp"
                android:tint="@color/white"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/info"/>

        <ImageButton
                android:id="@+id/post_save"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/bottom_bar_height"
                android:src="@drawable/ic_save_outline_24dp"
                android:tint="@color/white"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/save_file"/>

        <ImageButton
                android:id="@+id/post_vote"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="@dimen/bottom_bar_height"
                android:src="@drawable/ic_star_border_24dp"
                android:tint="@color/white"
                android:background="?attr/selectableItemBackground"
                android:contentDescription="@string/vote"/>

    </LinearLayout>

    <Space
            android:id="@+id/space_nav_bar"
            android:layout_width="1dp"
            android:layout_height="wrap_content"/>

</LinearLayout>