<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.activity.PurchaseActivity">

    <include layout="@layout/app_bar"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:paddingStart="40dp"
            android:paddingEnd="40dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:drawableStart="@mipmap/ic_launcher"
            android:text="@string/app_name"
            android:textAppearance="?textAppearanceHeadline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorIconTint"/>

    <androidx.appcompat.widget.AppCompatTextView
            android:padding="40dp"
            android:drawableStart="@drawable/tag_dot"
            android:drawableTint="@color/teal_700"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/donation_description"
            android:gravity="center_vertical"
            android:drawablePadding="20dp"
            android:textAppearance="?textAppearanceBody1"
            tools:targetApi="m"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@color/colorIconTint"/>

    <Button
            android:id="@+id/pay"
            android:layout_margin="20dp"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_pay_by_google_play"
            style="@style/Widget.Button.OutlinedButton"/>

</LinearLayout>