<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:context=".ui.activity.LoginActivity">
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="20dp">
        <View
                android:layout_width="0dp"
                android:layout_height="20dp" />
        <TextView
            android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"
                android:text="@string/title_login"
                android:textColor="?attr/colorPrimary"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textStyle="bold" />
        <View
                android:layout_width="65dp"
                android:layout_height="4dp"
                android:layout_gravity="start"
                android:layout_marginStart="10dp"
                android:background="?attr/colorPrimary"/>
        <View
                android:layout_width="0dp"
                android:layout_height="10dp" />
        <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                app:cardUseCompatPadding="false"
                style="@style/AppTheme.CardView">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">
                <View
                        android:layout_width="0dp"
                        android:layout_height="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_username"
                        app:counterEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/username_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="text|textPersonName|textAutoComplete"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>
                <View
                        android:layout_width="0dp"
                        android:layout_height="10dp" />
                <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                    app:counterEnabled="true"
                        app:passwordToggleEnabled="true"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
                    <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/password_edit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:imeActionId="6"
                            android:imeActionLabel="@string/action_sign_in_short"
                            android:imeOptions="actionUnspecified"
                            android:inputType="textPassword"
                            android:maxLength="50"
                            android:maxLines="1"
                            android:singleLine="true"/>
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <View
                android:layout_width="0dp"
                android:layout_height="20dp" />
        <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">
            <Button
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/action_sign_in_short"
                    style="@style/Widget.Button.OutlinedButton"/>
            <ProgressBar
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/progress_bar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"
                    style="@style/Widget.AppCompat.ProgressBar"/>
        </FrameLayout>
        <TextView
                android:paddingTop="15dp"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:id="@+id/error_msg"
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
